--- a/src/main/resources/templates/pages/org.html
+++ b/src/main/resources/templates/pages/org.html
@@ -148,7 +148,7 @@
                           <th>소속코드</th>
                           <th>부서이름</th>
                           <th>부서코드</th>
-                          <th>상위코드</th>
+                          <th>상위부서</th>
                           <th class="disabled-sorting text-right">Actions</th>
                         </tr>
                       </thead>
@@ -249,8 +249,6 @@
                             <div class="form-group md-form-group">
                               <div class="input-group upper_cd">
                                 <select class="selectpicker" data-size="7" data-style="btn btn-primary" id="upper_cd">
-                                  <option disabled selected>상위조직</option>
-                                  <option value="0">최상위조직</option>
                                 </select>
                               </div>
                             </div>
@@ -379,9 +377,38 @@
         });
     }
 
+    function upperList() {
+        $.ajax({
+          url: "getUppers.do",
+          type: "POST",
+          dataType: "json",
+          beforeSend: function (xhr) {
+            xhr.setRequestHeader(header, token);
+          },
+          success: function (result) {
+            var datas = result.data;
+
+            var options = '<option disabled selected>상위조직</option>';
+                options += '<option value="0">최상위조직</option>';
+
+            for(i=0;i<datas.length;i++) {
+                options += '<option value="'+datas[i].dept_cd+'">'+datas[i].dept_nm+'</option>';
+            }
+
+            $('select#upper_cd').html(options).selectpicker('refresh');
+            console.log(datas);
+            console.log(options);
+
+          },
+          error: function (thrownError) {
+            console.log(thrownError);
+          }
+        });
+    }
+
     function insertOrg() {
       $.ajax({
-          url : "registerORg.do",
+          url : "registerOrg.do",
           type : "POST",
           dataType : "json",
           beforeSend : function(xhr) {
@@ -398,7 +425,6 @@
             console.log(result);
             Swal.fire({
               title : '등록 완료!',
-              text : '초기 비밀번호는 이메일주소 입니다!'
             }).then((result) => {
               if (result.isConfirmed) {
                 location.reload();
@@ -474,7 +500,7 @@
 
     function deleteOrg(o_id) {
         $.ajax({
-          url : "deleteorg.do",
+          url : "deleteOrg.do",
           type : "POST",
           dataType : "json",
           beforeSend: function (xhr) {
@@ -490,142 +516,131 @@
         });
     }
 
+    upperList();
+
     $(document).ready(function() {
 
-      $('#OrgDatatable').DataTable({
 
-        "pagingType": "full_numbers",
-        "lengthMenu": [
-          [10, 25, 50, -1],
-          [10, 25, 50, "All"]
-        ],
-        responsive: true,
-        language: {
-          search: "_INPUT_",
-          searchPlaceholder: "Search records",
-        },
-        ajax : {
-          type : "POST",
-          url : "getUserDatatable.do",
-          dataType : "JSON",
-          beforeSend: function (xhr) {
-            xhr.setRequestHeader(header, token);
-          },
-        },
-        columns : [
-          {data : "user_nm"},
-          {data : "user_email"},
-          {data : "user_rank"},
-          {data : "corp_nm"},
-          {data : "org_nm"},
-          {
-              data : "uid",
-              defaultContent:"",
-              'targets': 0,
-              'searchable': false,
-              'className': 'text-right',
-              "render": function (data, type, row) {
-                var edit_btn = '<a href="#" class="btn btn-link text-warning btn-just-icon edit" data-uid="'+data+'"><i class="material-icons">dvr</i></a>';
-                var remove_btn = '<a href="#" class="btn btn-link text-danger btn-just-icon remove" data-uid="'+data+'"><i class="material-icons">close</i></a>';
-                return edit_btn+remove_btn;
+        $('#OrgDatatable').DataTable({
 
-              }
+            "pagingType": "full_numbers",
+            "lengthMenu": [
+              [10, 25, 50, -1],
+              [10, 25, 50, "All"]
+            ],
+            responsive: true,
+            language: {
+              search: "_INPUT_",
+              searchPlaceholder: "Search records",
             },
-            //     {
-            //   data : "uid",
-            //   defaultContent:"",
-            //   'targets': 0,
-            //   'searchable': false,
-            //   'className': 'dt-2',
-            //   "render": function (data, type, row) {
-            //       return '<a href="#" class="btn btn-link text-danger btn-just-icon remove"><i class="material-icons">close</i></a>';
-            //   }
-            // },
-      ],
+            ajax : {
+              type : "POST",
+              url : "getOrgDatatable.do",
+              dataType : "JSON",
+              beforeSend: function (xhr) {
+                xhr.setRequestHeader(header, token);
+              },
+            },
+            columns : [
+              {data : "corp_nm"},
+              {data : "corp_cd"},
+              {data : "dept_nm"},
+              {data : "dept_cd"},
+              {data : "upper_cd"},
+              {
+                  data : "o_id",
+                  defaultContent:"",
+                  'targets': 0,
+                  'searchable': false,
+                  'className': 'text-right',
+                  "render": function (data, type, row) {
+                    var edit_btn = '<a href="#" class="btn btn-link text-warning btn-just-icon edit" data-o_id="'+data+'"><i class="material-icons">dvr</i></a>';
+                    var remove_btn = '<a href="#" class="btn btn-link text-danger btn-just-icon remove" data-o_id="'+data+'"><i class="material-icons">close</i></a>';
+                    return edit_btn+remove_btn;
 
-      });
+                  }
+                },
+            ],
+          });
 
-      var table = $('#OrgDatatable').DataTable();
+          var table = $('#OrgDatatable').DataTable();
 
-      // Edit record
-      table.on('click', '.edit', function() {
-        // alert('You press on Row: ' + data[0] + ' ' + data[1] + ' ' + data[2] + '\'s row.');
+          // Edit record
+          table.on('click', '.edit', function() {
+            // alert('You press on Row: ' + data[0] + ' ' + data[1] + ' ' + data[2] + '\'s row.');
+            $('a[data-target="#regModal"]').click();
+            var o_id = $(this).attr('data-o_id');
+            editOrg(o_id);
 
-        $('a[data-target="#regModal"]').click();
-        $('a[data-toggle="modal"]').click();
-        var uid = $(this).attr('data-uid');
-        console.log(uid);
-        editUser(uid);
-
-      });
+          });
 
 
-      // Delete a record
-      table.on('click', '.remove', function(e) {
-        // $tr = $(this).closest('tr');
-        // if ($($tr).hasClass('child')) {
-        //   $tr = $tr.prev('.parent');
-        // }
-        // table.row($tr).remove().draw();
-        // e.preventDefault();
+          // Delete a record
+          table.on('click', '.remove', function(e) {
+            // $tr = $(this).closest('tr');
+            // if ($($tr).hasClass('child')) {
+            //   $tr = $tr.prev('.parent');
+            // }
+            // table.row($tr).remove().draw();
+            // e.preventDefault();
 
-        var uid = $(this).data('uid');
+            var o_id = $(this).data('o_id');
 
-        Swal.fire({
-          title: '조직을 삭제하시겠습니까?',
-          text: "삭제한 조직은 되돌릴 수 없습니다.",
-          icon: 'warning',
-          showCancelButton: true,
-          confirmButtonColor: '#3085d6',
-          cancelButtonColor: '#d33',
-          confirmButtonText: '네!',
-          cancelButtonText: '취소',
-        }).then((result) => {
-          if (result.isConfirmed) {
-              deleteUser(uid);
+            Swal.fire({
+              title: '조직을 삭제하시겠습니까?',
+              text: "삭제한 조직은 되돌릴 수 없습니다.",
+              icon: 'warning',
+              showCancelButton: true,
+              confirmButtonColor: '#3085d6',
+              cancelButtonColor: '#d33',
+              confirmButtonText: '네!',
+              cancelButtonText: '취소',
+            }).then((result) => {
+              if (result.isConfirmed) {
+                  deleteOrg(o_id);
+              }
+            });
+
+          });
+
+          // //Like record
+          // table.on('click', '.like', function() {
+          //   alert('You clicked on Like button');
+          // });
+
+          $('#reg_btn').click(function(e) {
+            e.preventDefault();
+            var o_id = $(this).data('o_id');
+            if(o_id) {
+              updateOrg(o_id);
+            } else {
+              insertOrg();
+            }
+          });
+
+          // 트리메뉴
+          function tree_menu() {
+            $('ul.depth_2 >li > a').click(function(e) {
+              var temp_el = $(this).next('ul');
+              var depth_3 = $('.depth_3');
+
+              depth_3.slideUp(300);
+              depth_3.parent().find('em').removeClass('on');
+
+              if (temp_el.is(':hidden')) {
+                temp_el.slideDown(300);
+                $(this).find('em').addClass('on').html('하위폴더 열림');
+              } else {
+                temp_el.slideUp(300);
+                $(this).find('em').removeClass('on').html('하위폴더 닫힘');
+              }
+              return false;
+            });
           }
-        });
 
-      });
-
-      // //Like record
-      // table.on('click', '.like', function() {
-      //   alert('You clicked on Like button');
-      // });
-
-      $('#reg_btn').click(function(e) {
-        e.preventDefault();
-        var uid = $(this).data('uid');
-        if(uid) {
-          updateUser(uid);
-        } else {
-          insertUser();
-        }
-      });
-
-      // 트리메뉴
-      function tree_menu() {
-        $('ul.depth_2 >li > a').click(function(e) {
-          var temp_el = $(this).next('ul');
-          var depth_3 = $('.depth_3');
-
-          depth_3.slideUp(300);
-          depth_3.parent().find('em').removeClass('on');
-
-          if (temp_el.is(':hidden')) {
-            temp_el.slideDown(300);
-            $(this).find('em').addClass('on').html('하위폴더 열림');
-          } else {
-            temp_el.slideUp(300);
-            $(this).find('em').removeClass('on').html('하위폴더 닫힘');
+          if ($('#tree_menu').is(':visible')) {
+              tree_menu();
           }
-          return false;
-        });
-      }
-
-      if ($('#tree_menu').is(':visible')) {
-          tree_menu();
-      }
 
     });
   </script>
