--- a/src/main/resources/static/css/phishy-custom.css
+++ b/src/main/resources/static/css/phishy-custom.css
@@ -51,3 +51,7 @@
 .tree_menu li.end {background:url(http://cfile23.uf.tistory.com/image/2272CF4B5694580418FF9C) no-repeat 0 0;}
 .form_tree_menu .depth_1 {background:url(http://cfile9.uf.tistory.com/image/22601F4B569457FF051E7E) no-repeat 5px 5px;}
 .form_tree_menu ul.depth_2 li {margin-left:6px;padding-left:27px;background:url(http://cfile25.uf.tistory.com/image/2757834B5694580514C5D6) no-repeat 0 5px;}
+
+/*유저테이블 이메일 td*/
+.Userdatatable-email { width: 40%; }
+.form-check.userdatatable { padding-top : 0px; }
