--- a/src/main/resources/static/css/phishy-custom.css
+++ b/src/main/resources/static/css/phishy-custom.css
@@ -54,4 +54,5 @@
 
 /*유저테이블 이메일 td*/
 .Userdatatable-email { width: 40%; }
+.Userdatatable-check { width: 8%; }
 .form-check.userdatatable { padding-top : 0px; }
